--- a/front/src/app/wine/Wine-start/wine-start.component.html
+++ b/front/src/app/wine/Wine-start/wine-start.component.html
@@ -1,3 +1,2 @@
 <h2 id="welcome"> Welcome to Webcoholic Store!<br> </h2>
-<h3 id="welcometext">
-</h3>
+<h3 id="welcometext">description of this category</h3>
