--- a/front/src/app/wine/Wine-start/wine-start.component.html
+++ b/front/src/app/wine/Wine-start/wine-start.component.html
@@ -1,2 +1,5 @@
-<h2 id="welcome"> Welcome to Webcoholic Store!<br> </h2>
-<h3 id="welcometext">description of this category</h3>
+<h2 id="welcome"> Welcome to Webcoholic Store!</h2>
+<h3 id="welcometext">Explore a great range of fantastic wines from around the world. 
+Discover everything from New Zealand Sauvignon Blancs to Spanish Riojas. 
+Whether you are looking for wines to please a crowd or something really special we have the wine for you.
+</h3>
