other categories (clickable)

--- a/front/src/app/beers/beer-detail/beer-detail.component.html
+++ b/front/src/app/beers/beer-detail/beer-detail.component.html
@@ -1,11 +1,11 @@
 <div class="row">
   <div class="col-xs-12">
-    <img [src]="wine.imagePath" alt="{{wine.name}}" class="img-rounded" style="max-height: 400px;">
+    <img [src]="beer.imagePath" alt="{{beer.name}}" class="img-rounded" style="max-height: 400px;">
   </div>
 </div>
 <div class = "row">
   <div class="col-xs-12">
-    <h1> {{wine.name}}</h1>
+    <h1> {{beer.name}}</h1>
   </div>
 </div>
 <div class ="row">
@@ -22,11 +22,11 @@
 
 <div class="row" >
   <div class="col-xs-12" id="price">
-    Price:  {{wine.price}} <hr>
+    Price:  {{beer.price}} <hr>
   </div>
 </div>
 <div class="row" >
   <div class="col-xs-12" id="desc">
-    {{wine.description}} <hr>
+    {{beer.description}} <hr>
   </div>
 </div>
