--- a/front/src/app/beers/beer-list/beer-item/beer-item.component.html
+++ b/front/src/app/beers/beer-list/beer-item/beer-item.component.html
@@ -4,13 +4,13 @@
   routerLinkActive="active"
   class="list-group-item clearfix">
   <div class="pull-left">
-    <h4 class="list-group-item-heading">{{ wine.name }}</h4>
-    <p class="list-group-item-text">{{ wine.price }}</p>
+    <h4 class="list-group-item-heading">{{ beer.name }}</h4>
+    <p class="list-group-item-text">{{ beer.price }}</p>
   </div>
   <span class="pull-right">
         <img
-          [src]="wine.imagePath"
-          alt="{{ wine.name }}"
+          [src]="beer.imagePath"
+          alt="{{ beer.name }}"
           class="img-responsive"
           style="max-height: 50px;">
       </span>
