--- a/front/src/app/beers/beers.component.html
+++ b/front/src/app/beers/beers.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-5">
-    <app-wine-list></app-wine-list>
+    <app-beer-list></app-beer-list>
   </div>
   <div class="col-md-7">
     <router-outlet> </router-outlet>
