--- a/front/src/app/champagne/champagne-detail/champagne-detail.component.html
+++ b/front/src/app/champagne/champagne-detail/champagne-detail.component.html
@@ -1,11 +1,11 @@
 <div class="row">
   <div class="col-xs-12">
-    <img [src]="wine.imagePath" alt="{{wine.name}}" class="img-rounded" style="max-height: 400px;">
+    <img [src]="champagne.imagePath" alt="{{champagne.name}}" class="img-responsive" style="max-height: 300px;">
   </div>
 </div>
 <div class = "row">
   <div class="col-xs-12">
-    <h1> {{wine.name}}</h1>
+    <h1> {{champagne.name}}</h1>
   </div>
 </div>
 <div class ="row">
@@ -22,11 +22,11 @@
 
 <div class="row" >
   <div class="col-xs-12" id="price">
-    Price:  {{wine.price}} <hr>
+    Price:  {{champagne.price}} <hr>
   </div>
 </div>
 <div class="row" >
   <div class="col-xs-12" id="desc">
-    {{wine.description}} <hr>
+    {{champagne.description}} <hr>
   </div>
 </div>
