--- a/front/src/app/header/header.component.html
+++ b/front/src/app/header/header.component.html
@@ -5,13 +5,13 @@
     </div>
     <div class="collapse navbar-collapse">
     <ul class="nav navbar-nav">
-      <li routerLinkActive="active"><a routerLink="/Wine"id="top2">Wine</a></li>
+      <li routerLinkActive="active"><a routerLink="/wine"id="top2">Wine</a></li>
       <li routerLinkActive="active"><a routerLink="/champagne"id="top3">Champagne & Sparkling</a></li>
-      <li routerLinkActive="active"><a routerLink="/beer"id="top4">Beer & Spirits</a></li>
+      <li routerLinkActive="active"><a routerLink="/beers"id="top4">Beer & Spirits</a></li>
     </ul>
 
     <ul class="nav navbar-nav navbar-left">
-      <li routerLinkActive="active"> <a routerLink="/about" id = "top5"> ABOUT US </a> </li>
+      <li routerLinkActive="active"> <a routerLink="/about" id = "top5"> About us </a> </li>
     </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown" appDropdown>
