--- a/front/src/app/wine/Wine-list/wine-list.component.html
+++ b/front/src/app/wine/Wine-list/wine-list.component.html
@@ -2,10 +2,10 @@
 <div class="row">
   <div class="col-xs-12">
 
-    <app-Wine-item
+    <app-wine-item
 
-      *ngFor="let WineEl of Winee; let i = index"
-      [Wine]="WineEl"
-      [index]="i"> </app-Wine-item>
+      *ngFor="let wineEl of winee; let i = index"
+      [wine]="wineEl"
+      [index]="i"> </app-wine-item>
   </div>
 </div>
