--- a/front/src/app/champagne/champagne-list/champagne-item/champagne-item.component.html
+++ b/front/src/app/champagne/champagne-list/champagne-item/champagne-item.component.html
@@ -4,14 +4,14 @@
   routerLinkActive="active"
   class="list-group-item clearfix">
   <div class="pull-left">
-    <h4 class="list-group-item-heading">{{ wine.name }}</h4>
-    <p class="list-group-item-text">{{ wine.price }}</p>
+    <h4 class="list-group-item-heading">{{ champagne.name }}</h4>
+    <p class="list-group-item-text">{{ champagne.price }}</p>
   </div>
   <span class="pull-right">
         <img
-          [src]="wine.imagePath"
-          alt="{{ wine.name }}"
+          [src]="champagne.imagePath"
+          alt="{{ champagne.name }}"
           class="img-responsive"
-          style="max-height: 50px;">
+          style="max-height: 60px;">
       </span>
 </a>
