--- a/front/src/app/header/header.component.html
+++ b/front/src/app/header/header.component.html
@@ -14,8 +14,13 @@
       <li routerLinkActive="active"> <a routerLink="/about" id = "top5"> About us </a> </li>
     </ul>
       <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav">
+          <li routerLinkActive="active"><a routerLink="/login"id="top6">Login</a></li>
+         
+        </ul>
         <li class="dropdown" appDropdown>
           <a style="cursor: pointer;" class="dropdown-toggle" role="button">🛒 <span class="caret"></span></a>
+
           <ul class="dropdown-menu">
             <li><a style="cursor: pointer;"> View shopping cart</a></li>
             <li><a style="cursor: pointer;"> Clear selected products</a></li>
