--- a/front/src/app/header/header.component.html
+++ b/front/src/app/header/header.component.html
@@ -15,11 +15,11 @@
     </ul>
       <ul class="nav navbar-nav navbar-right">
         <ul class="nav navbar-nav">
-          <li routerLinkActive="active"><a routerLink="/login"id="top6">Login</a></li>
-         
+          <li routerLinkActive="active"> <a routerLink="/login"id="top6" >👤</a> </li>
+          <li routerLinkActive="active"> <a routerLink="/comment"id="top7" >🗨️</a> </li>
         </ul>
         <li class="dropdown" appDropdown>
-          <a style="cursor: pointer;" class="dropdown-toggle" role="button">🛒 <span class="caret"></span></a>
+          <a style="cursor: pointer;" class="dropdown-toggle" role="button"> 🛒<span class="caret"></span></a>
 
           <ul class="dropdown-menu">
             <li><a style="cursor: pointer;"> View shopping cart</a></li>
