--- a/front/src/app/header/header.component.html
+++ b/front/src/app/header/header.component.html
@@ -6,12 +6,13 @@
     <div class="collapse navbar-collapse">
     <ul class="nav navbar-nav">
       <li routerLinkActive="active"><a routerLink="/wine"id="top2">Wine</a></li>
-      <li routerLinkActive="active"><a routerLink="/champagne"id="top3">Champagne & Sparkling</a></li>
-      <li routerLinkActive="active"><a routerLink="/beers"id="top4">Beer & Spirits</a></li>
+      <li routerLinkActive="active"><a routerLink="/champagne"id="top3">Champagne</a></li>
+      <li routerLinkActive="active"><a routerLink="/beers"id="top4">Beer</a></li>
+      <li routerLinkActive="active"><a routerLink="/vodkas"id="top5">Vodka</a></li>
     </ul>
 
     <ul class="nav navbar-nav navbar-left">
-      <li routerLinkActive="active"> <a routerLink="/about" id = "top5"> About us </a> </li>
+      <li routerLinkActive="active"> <a routerLink="/about" id = "top6"> About us </a> </li>
     </ul>
       <ul class="nav navbar-nav navbar-right">
         <ul class="nav navbar-nav">
